<resources>
    <string name="app_name" translatable="false">Gà Dictionary</string>
    <string name="LooksUpWords">Looks up words</string>
    <string name="yourWords">Your Words</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="recentWords">Recent words</string>
    <string name="settings">Settings</string>
    <string name="definition">Definition</string>
    <string name="images">Images</string>
    <string name="ukVoice" translatable="false">UK</string>
    <string name="usVoice" translatable="false">US</string>
    <string name="loading">Loading....</string>
    <string name="loading2">Almost doneee!</string>
    <string name="letSearch">Let\'s search something..?</string>
    <string name="deleted">is removed from Your Words</string>
    <string name="added">is added to Your Word</string>
    <string name="deleleted2">is removed from Recent Words</string>
    <string name="empty">Such empty..</string>
    <string name="darkMode">Dark mode</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
</resources>
