<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Gà Dictionary" />

    <Button
        android:id="@+id/btnLookUps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LooksUpWords" />

    <Button
        android:id="@+id/btnYourWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourWords"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="101dp" />

    <Button
        android:id="@+id/btnRecent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recentWords"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="156dp" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="204dp" />

</LinearLayout>