<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    android:orientation="vertical"
    tools:context="iamthaoly.com.models.Setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutChooseLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtChooseLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/language"
                android:textAllCaps="true"
                android:textColor="?attr/metaTextColor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="?attr/metaTextColor"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/radVietnamese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vietnamese"
                    android:textColor="?attr/metaTextColor"
                    android:textSize="18dp" />
            </RadioGroup>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/layoutDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDarkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/darkMode"
                android:textAllCaps="true"
                android:textColor="?attr/metaTextColor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/darkMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/radDarkOn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/On"
                    android:textColor="?attr/metaTextColor"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/radDarkOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Off"
                    android:textColor="?attr/metaTextColor"
                    android:textSize="18dp" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
